legacy/kubernetes/base/ingress/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mis-portal
  namespace: mis-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  tls:
    - hosts:
        - portal.example.gov
      secretName: mis-portal-tls
  rules:
    - host: portal.example.gov
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fastapi-api-active
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-active
                port:
                  number: 80
